--- a/docs-2.0/2.quick-start/3.1add-storage-hosts.md
+++ b/docs-2.0/2.quick-start/3.1add-storage-hosts.md
@@ -27,6 +27,21 @@ You have [connected to NebulaGraph](3.connect-to-nebula-graph.md).
   nebula> ADD HOSTS 192.168.10.100:9779, 192.168.10.101:9779, 192.168.10.102:9779;
   ```
 
+  {{ent.ent_begin}}
+
+  If enabling the [Zone](../../4.deployment-and-installation/5.zone.md) feature, you still need to specify `INTO ZONE <zone_name>` to add Storage hosts, otherwise the Storage hosts will fail to be added. 
+
+  ```ngql
+  ADD HOSTS <ip>:<port> [,<ip>:<port> ...] INTO ZONE <zone_name>;
+  ```
+  
+  Example:
+
+  ```ngql
+  nebula> ADD HOSTS 192.168.8.111:9779,192.168.8.112:9779 INTO ZONE az1;
+  ```
+  {{ent.ent_end}}
+
   !!! caution
 
         Make sure that the IP you added is the same as the IP configured for `local_ip` in the `nebula-storaged.conf` file. Otherwise, the Storage service will fail to start. For information about configurations, see [Configurations](../5.configurations-and-logs/1.configurations/1.configurations.md).  
