--- a/docs-2.0/3.ngql-guide/9.space-statements/4.describe-space.md
+++ b/docs-2.0/3.ngql-guide/9.space-statements/4.describe-space.md
@@ -30,11 +30,11 @@ If you specify Zones for a space, the `DESCRIBE SPACE` statement will show the Z
 
 ```ngql
 nebula> DESCRIBE SPACE basketballplayer;
-+----+--------------------+------------------+----------------+---------+------------+--------------------+-------------+-----------+---------+
-| ID | Name               | Partition Number | Replica Factor | Charset | Collate    | Vid Type           | Atomic Edge | Zones     | Comment |
-+----+--------------------+------------------+----------------+---------+------------+--------------------+-------------+-----------+---------+
-| 1  | "basketballplayer" | 10               | 1              | "utf8"  | "utf8_bin" | "FIXED_STRING(32)" | false       | "default" |         |
-+----+--------------------+------------------+----------------+---------+------------+--------------------+-------------+-----------+---------+
++----+--------------------+------------------+----------------+---------+------------+--------------------+-----------------------+---------+
+| ID | Name               | Partition Number | Replica Factor | Charset | Collate    | Vid Type           | Zones                 | Comment |
++----+--------------------+------------------+----------------+---------+------------+--------------------+-----------------------+---------+
+| 51 | "basketballplayer" | 10               | 4              | "utf8"  | "utf8_bin" | "FIXED_STRING(32)" | ["az1", "az2", "az3"] |         |
++----+--------------------+------------------+----------------+---------+------------+--------------------+-----------------------+---------+
 ```
 {{ent.ent_end}}
 
