--- a/docs-2.0/4.deployment-and-installation/5.zone.md
+++ b/docs-2.0/4.deployment-and-installation/5.zone.md
@@ -20,7 +20,7 @@ Taking the following picture as an example, when creating a graph space (S1), th
 
 <img src="https://docs-cdn.nebula-graph.com.cn/figures/core_zone_230913.png" width="800" alt="example_for_zones">
 
-To reduce cost of cross-Zone network traffic, and increase data transfer speed (Intra-zone network usually has a lower latency than inter-zone network), you can configure the Graph service to prioritize intra-zone data access. Each Graphd will then prioritize to access the partition replica in the same zone as specified by Graphd if there is any. As an example, suppose Graph A and Graph B are located in zone1, Graph C and Graph D are in zone2, and Graph E is in zone3. You can configure Graph A and Graph B to prioritize accessing data in zone1, Graph C and Graph D to prioritize accessing data in zone2, and Graph E to prioritize accessing data in zone3. This helps reduce the cost of cross-zone network traffic and improves data transfer speed.
+To reduce cost of cross-Zone network traffic, and increase data transfer speed (Intra-zone network usually has a lower latency than inter-zone network), you can configure the Graph service to prioritize intra-zone data access. Each Graphd will then prioritize to access the partition replica in the same zone as specified by Graphd if there is any. As an example, suppose Graphd A and Graphd B are located in zone1, Graphd C and Graphd D are in zone2, and Graphd E is in zone3. You can configure Graphd A and Graphd B to prioritize accessing data in zone1, Graphd C and Graphd D to prioritize accessing data in zone2, and Graphd E to prioritize accessing data in zone3. This helps reduce the cost of cross-zone network traffic and improves data transfer speed.
 
 <img src="https://docs-cdn.nebula-graph.com.cn/figures/core_intra_zone_20230913.png" width="800" alt="example_for_intra_zone">
 
@@ -33,7 +33,7 @@ In cases where data retrieval fails due to a Storage node failure in a specific 
 
 - Resource isolation. You can create a graph space on specified storage nodes to achieve resource isolation.
 - Rolling upgrade. You need to stop one or more servers to update them, and then put them into use again until all servers in the cluster are updated to the new version.
-- Cost saving. Allocate different graph spaces to different Zones, and control the client to access the replica data in the specified Zone to reduce traffic consumption and improve access efficiency.
+- Cost saving. Allocate graph space data to different Zones, and control the client to access the replica data in the specified Zone to reduce traffic consumption and improve access efficiency.
 
 ## Notes
 
@@ -107,7 +107,7 @@ nebula> SHOW ZONES;
 +--------+-----------------+------+
 ```
 
-Run `SHOW ZONES` in the current graph space to view all Zone information. The Zone information includes the name of the Zone, the IP address and the port number of the storage node in the Zone.
+Run `SHOW ZONES` in the current graph space to view all Zone information. The Zone information includes the name of the Zone, the IP address (or domain name) and the port number of the storage node in the Zone.
 
 ### View the specified Zone
 
@@ -229,7 +229,7 @@ DROP HOSTS <ip>:<port> [,<ip>:<port> ...];
 !!! note
 
     - You cannot directly drop a Storage node that is in use. You need to first drop the associated graph space before dropping the Storage nodes. See [drop space](../3.ngql-guide/9.space-statements/5.drop-space.md) for details.
-    - Make sure enough remaining Storage nodes to support the set Zones after removing a node, or the graph space will be unavailable.
+    - Make sure the number of remaining Storage nodes outnumbers or equals that of Zones after removing a node, otherwise, the graph space will be unavailable.
 
 For example: 
 
